Bug #6036 <https://bugs.freedesktop.org/show_bug.cgi?id=6036> Check for     key_setnet declaration before defining it to avoid compiler error of     conflicting types on DragonFly BSD